# BPP

./: .envrc  README.md  extract_metrics.py  extract_pos_grad.py  extract_pos_scale.py  flake.nix  pyproject.toml  test_rev.py  test_rev_grad.py
doc/: bpp.html  index.html  search.js
doc/bpp/: _tensor.html  conf.html  data.html  loss.html  model.html
doc/bpp/data/: _digest.html  _parallel.html  _warnings.html  constants.html  graph.html  transform.html
doc/bpp/data/graph/: _pdb.html  annotation.html  construction.html  operator.html
doc/bpp/model/: _arguments.html  _broadcast.html  _deterministic.html  _jacobian.html  _reversible.html  _solvers.html  _tensor.html  _unrecorded.html  egnn.html
doc/bpp/model/egnn/: implicit.html  implicit_backup_1.html  implicit_backup_2.html  reversible.html  unrecorded.html
src/bpp/: __init__.py  __main__.py  _tensor.py  loss.py
src/bpp/conf/: main.yaml  trainer.yaml
src/bpp/conf/callbacks/: checkpoint.yaml  rich_model_summary.yaml  rich_progress_bar.yaml
src/bpp/conf/data/: atom.yaml  base.yaml  residue.yaml
src/bpp/conf/logger/: csv.yaml  wandb.yaml
src/bpp/conf/loss/: ftl.yaml
src/bpp/conf/metrics/: accuracy.yaml  f1.yaml  jaccard.yaml  precision.yaml  recall.yaml
src/bpp/conf/model/: base.yaml  deep.yaml  implicit.yaml  reversible.yaml  unrecorded.yaml
src/bpp/conf/optimizer/: adam.yaml  (+2 more)
src/bpp/data/: __init__.py  _digest.py  _parallel.py  _warnings.py  constants.py  transform.py
src/bpp/model/: __init__.py  _arguments.py  _deterministic.py  _reversible.py  _solvers.py  _tensor.py  _unrecorded.py
(+50 files in other folders)
